# resource_management_in_haskell

./: 01_cpp_scope.cpp  02_haskell_open_close.hs  03_haskell_with.hs  04_haskell_cont.hs  05_haskell_scope_guard.hs  06_haskell_copy_cont.hs  06_haskell_copy_with.hs  07_haskell_stack.hs  LICENSE  Makefile  README.md  Resource.hs  resource-management-examples.cabal
